[package]
name = "htn_planner"
version = "0.1.0"
edition = "2018"
description = "HTN parser and planner"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name         = "htn_planner"
crate-type   = ["rlib", "cdylib"]

[dependencies]
priority-queue = "1.1.1"
tempfile = "3.3.0"
filename = "0.1.1"
# z3 = "0.11.2"
